--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "^1.22.2",
     "@react-native-firebase/app": "^19.0.0",
     "@react-native-firebase/messaging": "^19.0.0",
@@ -18,8 +19,11 @@
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/stack": "^6.3.23",
     "react": "18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-manage-wallpaper": "^1.2.1",
+    "react-native-navigation-bar-color": "^2.0.2",
     "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
@@ -27,7 +31,8 @@
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
