--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "^1.22.2",
+    "@react-native-community/netinfo": "^11.3.1",
     "@react-native-firebase/app": "^19.0.0",
     "@react-native-firebase/messaging": "^19.0.0",
     "@react-navigation/bottom-tabs": "^6.5.14",
@@ -21,9 +22,12 @@
     "react": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-native": "0.73.4",
+    "react-native-animatable": "^1.4.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-manage-wallpaper": "^1.2.1",
     "react-native-navigation-bar-color": "^2.0.2",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
